fixed z-indexes

--- a/src/Components/Landing/scss/style.scss
+++ b/src/Components/Landing/scss/style.scss
@@ -61,6 +61,8 @@ nav {
         margin: 0 20px;
         text-decoration: none;
         color: #fff;
+        z-index: 20;
+
         &:hover {
           color: $main-color;
         }
@@ -73,7 +75,7 @@ nav {
   position: absolute;
   width: 100%;
   height: 100vh;
-  z-index: -1;
+  z-index: 2;
   top: 0;
   @media screen and (max-width: 1163px) {
     flex-direction: column;
@@ -96,6 +98,8 @@ nav {
   }
   .Authorize {
     width: 50%;
+    position: relative;
+    z-index: 99;
     @include Center;
     .authorize-button {
       padding: 0 20px;
@@ -108,12 +112,12 @@ nav {
       border-radius: 70px;
       margin-right: 20px;
       color: #000;
-      position: relative;
       cursor: pointer;
       border: 3px solid black;
       font-size: 1.1em;
       font-weight: 900;
       transition: 0.5s ease;
+      z-index: 99;
       @media screen and (max-width: 1163px) {
         height: 60px;
       }
@@ -137,14 +141,10 @@ nav {
 .Waves {
   position: absolute;
   right: 0;
-  bottom: 0;
+  top: 0;
   height: 100%;
 }
 
-a {
-  text-decoration: none;
-  color: #000;
-}
 // Non-Special
 ::-moz-selection {
   background: $main-color;
